[package]
name = "supertimeline-napi"
version = "0.1.0"
authors = ["Julian Waller <git@julusian.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# serde_path_to_error = "0.1"
supertimeline = { path = "../supertimeline"} #, features = ["serde_support"] }
# supertimeline-json = { path = "../supertimeline-json" }
napi = { version = "1", features = ["napi7"] }
napi-derive = "1"


[dev-dependencies]

[build-dependencies]
napi-build = "1"