[package]
name = "supertimeline"
version = "0.1.0"
authors = ["Julian Waller <git@julusian.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["serde", "serde_json"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
velcro = "0.5.3"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
