[package]
name = "supertimeline"
version = "0.1.0"
authors = ["Julian Waller <git@julusian.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serializer = ["serde"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
velcro = "0.5.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
